# vite-embed

./: Cargo.toml
vite-embed/: Cargo.toml
vite-embed-axum/: Cargo.toml
vite-embed-axum/src/: axum_compat.rs  lib.rs
vite-embed-macro/: Cargo.toml
vite-embed-macro/src/: lib.rs
vite-embed/src/: lib.rs
