[package]
name = "vite-embed-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", default-features = false }
tokio = { version = "1.29.1", default-features = false, features = ["rt"] }
vite-embed = { version = "0.1.0", path = "../vite-embed" }

[features]
dev = ["vite-embed/dev"]
prod = ["vite-embed/prod"]
