[package]
name = "vite-embed"
version = "0.1.0"
edition = "2021"

[features]
dev = ["vite-embed-macro/dev", "dep:ureq"]
prod = ["vite-embed-macro/prod"]

[dependencies]
mime = "0.3.17"
ureq = { version = "2.6.2", default-features = false, optional = true }
vite-embed-macro = { path = "../vite-embed-macro" }
